--- a/AQM Test.ipynb
+++ b/AQM Test.ipynb
@@ -47,7 +47,12 @@
    "outputs": [],
    "source": [
     "# https://www.youtube.com/watch?v=ZHPwPHkrT4I\n",
-    "# https://www.youtube.com/watch?v=k9cuKNnLF9w"
+    "# https://www.youtube.com/watch?v=k9cuKNnLF9w\n",
+    "\n",
+    "\n",
+    "# Train = hier wird das optimale Lambda bestummen\n",
+    "# Validation = hier werden die 2 verschiednen Modelle ausgewertet\n",
+    "# Test = hier wird angeschaut wie gut die Voraussagen sind"
    ]
   },
   {
@@ -149,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "6405dca0",
    "metadata": {},
    "outputs": [
@@ -162,7 +167,7 @@
       "===================================================================\n",
       "Model:              OLS              Adj. R-squared:     0.974     \n",
       "Dependent Variable: y                AIC:                28556.6874\n",
-      "Date:               2022-05-17 10:01 BIC:                28585.5288\n",
+      "Date:               2022-05-17 11:46 BIC:                28585.5288\n",
       "No. Observations:   10000            Log-Likelihood:     -14274.   \n",
       "Df Model:           3                F-statistic:        1.230e+05 \n",
       "Df Residuals:       9996             Prob (F-statistic): 0.00      \n",
@@ -188,6 +193,11 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
     "#Input parameters\n",
     "n = 10000; mu1 = 0; sigma1 = 1; mu2 = 0; sigma2 = 1; mu3 = 0\n",
     "sigma3 = 1; c = 5; beta1 = 3; beta2 = 5; beta3 = 2\n",
@@ -238,16 +248,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "336bccdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso Estimates from package: [4.99799408 0.62934538 2.6802179  0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "lam = 2.3\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(xs,y)\n",
+    "rr = Lasso(alpha=lam, fit_intercept=True)\n",
+    "rr.fit(xs,y)\n",
+    "print(\"Lasso Estimates from package:\", np.append(rr.intercept_,rr.coef_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e18c630b",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "41a53f9f1c4e6100adb615a97637846208a0e91ef79bf1ee121234ca4e90fc3d"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
