with tol in ridge

--- a/AQM Test.ipynb
+++ b/AQM Test.ipynb
@@ -242,6 +242,7 @@
     "lr = LinearRegression()\n",
     "lr.fit(xs,y)\n",
     "rr = Ridge(alpha=lam, fit_intercept=True, solver='sparse_cg')\n",
+    "# rr = Ridge(alpha=lam, fit_intercept=True, solver='sparse_cg', tol=0.00000001)\n",
     "rr.fit(xs, y)\n",
     "print(\"Ridge Estimates from package: \",np.append(rr.intercept_,rr.coef_))"
    ]
