--- a/AQM Test.ipynb
+++ b/AQM Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "05c667c9",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "557f415f",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "89c7f0a5",
    "metadata": {},
    "outputs": [],
@@ -57,28 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9a774d4a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45211"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(bank_full)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2bb8bb23",
    "metadata": {},
    "outputs": [],
@@ -88,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "41fda5e9",
    "metadata": {},
    "outputs": [
@@ -113,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "e9a2cf74",
    "metadata": {},
    "outputs": [
@@ -134,6 +113,26 @@
     "print(\"Prozent von Total: \" '{:.2f}'.format(len(train)/len(bank_full)*100), \"%\")\n",
     "print(\"Länge vom Valuation: \", len(valuation))\n",
     "print(\"Prozent von Total: \" '{:.2f}'.format(len(valuation)/len(bank_full)*100), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9a774d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Länge von Bank_full:  45211\n",
+      "Total assigned:       45211\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Länge von Bank_full: \", len(bank_full))\n",
+    "print(\"Total assigned:      \", len(train) + len(test) + len(valuation))"
    ]
   },
   {
