--- a/AQM Test.ipynb
+++ b/AQM Test.ipynb
@@ -50,9 +50,9 @@
     "# https://www.youtube.com/watch?v=k9cuKNnLF9w\n",
     "\n",
     "\n",
-    "# Train = hier wird das optimale Lambda bestummen\n",
-    "# Validation = hier werden die 2 verschiednen Modelle ausgewertet\n",
-    "# Test = hier wird angeschaut wie gut die Voraussagen sind"
+    "# Train = estimat the model\n",
+    "# Validation = find the optimal lambda\n",
+    "# Test = compare the model with other models"
    ]
   },
   {
