--- a/AQM Test.ipynb
+++ b/AQM Test.ipynb
@@ -20,7 +20,7 @@
     "import statsmodels.api as sm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# other imports will be made when needed lator in the code"
+    "# other imports will be made when needed later in the code"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a346e1b3",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7b19ba59",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c00fcf31",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "778c1f4a",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7792f208",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f4d1dbba",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "4cee6878",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "98ccc0ea",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,11 +769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "b1ad8f45",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We define the x Table and y Table\n",
+    "    #x Table contains all ....... (without the outcome)\n",
+    "    #y Table only contains the Outcome 0 or 1 (=Success)\n",
     "x = clean_bank_add_full.drop('y_yes', axis=1)\n",
     "y = clean_bank_add_full['y_yes']"
    ]
@@ -788,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "a5ec74bf",
    "metadata": {},
    "outputs": [],
@@ -800,37 +803,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "029ee429",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of train_x: (28831, 53)\n",
+      "Shape of test_x: (12357, 53)\n",
+      "Shape of train_y: (28831,)\n",
+      "Shape of test_y: (12357,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Quick check if the split is correct:\n",
+    "print(\"Shape of train_x: \"+str(train_x.shape))\n",
+    "print(\"Shape of test_x: \"+str(test_x.shape))\n",
+    "print(\"Shape of train_y: \"+str(train_y.shape))\n",
+    "print(\"Shape of test_y: \"+str(test_y.shape))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "10b10afa",
    "metadata": {},
    "source": [
-    "## Lets start with an Linear Regression"
+    "## Linear Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "ccc1f022",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#??\n",
     "from sklearn.linear_model import LinearRegression\n",
     "reg = LinearRegression().fit(train_x, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "5b34b403",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3655920334520212"
+       "0.3655920334520185"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,12 +874,12 @@
    "id": "f3dfd310",
    "metadata": {},
    "source": [
-    "## Lets do the Lasso - L1 regularization"
+    "## Lasso - L1 regularization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "id": "4520569f",
    "metadata": {},
    "outputs": [
@@ -858,16 +887,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso Estimates from package: [ 4.36625088e+00  0.00000000e+00  4.40575692e-04 -0.00000000e+00\n",
-      " -3.45043504e-04  0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
-      "  0.00000000e+00 -0.00000000e+00 -7.80882726e-04 -0.00000000e+00\n",
-      " -0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "Lasso Estimates from package: [ 4.25468792e+00  0.00000000e+00  4.32463724e-04 -0.00000000e+00\n",
+      " -3.57069430e-04  0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
+      "  0.00000000e+00 -0.00000000e+00 -7.56629585e-04 -0.00000000e+00\n",
       " -0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "  0.00000000e+00  0.00000000e+00 -0.00000000e+00  0.00000000e+00\n",
+      " -0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00 -0.00000000e+00 -0.00000000e+00  0.00000000e+00\n",
       " -0.00000000e+00 -0.00000000e+00 -0.00000000e+00 -0.00000000e+00\n",
       "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      " -0.00000000e+00  0.00000000e+00  0.00000000e+00 -0.00000000e+00\n",
-      "  0.00000000e+00 -0.00000000e+00 -0.00000000e+00  0.00000000e+00\n",
+      " -0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "  0.00000000e+00  0.00000000e+00 -0.00000000e+00  0.00000000e+00\n",
       "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       " -0.00000000e+00 -0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       " -0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
@@ -892,17 +921,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "id": "7fe5a73b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-2.2182525933445163e-05"
+       "0.31755083571261244"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,17 +942,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "id": "8d4de685",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.30283839040616223"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +966,7 @@
    "id": "d7ad2dee",
    "metadata": {},
    "source": [
-    "## Now lets contiune with the Ridge Regression - L2 regularization"
+    "## Ridge Regression - L2 regularization"
    ]
   },
   {
@@ -1034,10 +1063,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "41a53f9f1c4e6100adb615a97637846208a0e91ef79bf1ee121234ca4e90fc3d"
+   "hash": "e520a469617dc4d8bf771f1a7d6422397314db060637112fffa727df7f704ab9"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1051,7 +1080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
