--- a/AQM Test.ipynb
+++ b/AQM Test.ipynb
@@ -524,6 +524,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "e565f24c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'job', 'marital', 'education', 'default', 'housing', 'loan',\n",
+       "       'contact', 'month', 'day_of_week', 'duration', 'campaign', 'pdays',\n",
+       "       'previous', 'poutcome', 'emp.var.rate', 'cons.price.idx',\n",
+       "       'cons.conf.idx', 'euribor3m', 'nr.employed', 'y'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bank_add_full.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "57ce2d6e",
    "metadata": {},
@@ -769,6 +794,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "74343e06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'duration', 'campaign', 'pdays', 'previous', 'emp.var.rate',\n",
+       "       'cons.price.idx', 'cons.conf.idx', 'euribor3m', 'nr.employed',\n",
+       "       'job_blue-collar', 'job_entrepreneur', 'job_housemaid',\n",
+       "       'job_management', 'job_retired', 'job_self-employed', 'job_services',\n",
+       "       'job_student', 'job_technician', 'job_unemployed', 'job_unknown',\n",
+       "       'marital_married', 'marital_single', 'marital_unknown',\n",
+       "       'education_basic.6y', 'education_basic.9y', 'education_high.school',\n",
+       "       'education_illiterate', 'education_professional.course',\n",
+       "       'education_university.degree', 'education_unknown', 'default_unknown',\n",
+       "       'default_yes', 'housing_unknown', 'housing_yes', 'loan_unknown',\n",
+       "       'loan_yes', 'contact_telephone', 'month_aug', 'month_dec', 'month_jul',\n",
+       "       'month_jun', 'month_mar', 'month_may', 'month_nov', 'month_oct',\n",
+       "       'month_sep', 'day_of_week_mon', 'day_of_week_thu', 'day_of_week_tue',\n",
+       "       'day_of_week_wed', 'poutcome_nonexistent', 'poutcome_success', 'y_yes'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_bank_add_full.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81601451",
+   "metadata": {},
+   "source": [
+    "## Next we define the X & Y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "b1ad8f45",
    "metadata": {},
@@ -777,8 +845,8 @@
     "# We define the x Table and y Table\n",
     "    #x Table contains all ....... (without the outcome)\n",
     "    #y Table only contains the Outcome 0 or 1 (=Success)\n",
-    "x = clean_bank_add_full.drop('y_yes', axis=1)\n",
-    "y = clean_bank_add_full['y_yes']"
+    "x = clean_bank_add_full.drop('y_yes', axis=1)       # independant features\n",
+    "y = clean_bank_add_full['y_yes']                    # dependent variable"
    ]
   },
   {
@@ -786,25 +854,29 @@
    "id": "51ec841f",
    "metadata": {},
    "source": [
-    "## We split the Dataset into Train (0.7) & Test (0.3)"
+    "## We split the Dataset into Train (0.5) / Validation (0.2) / Test (0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "a5ec74bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "# random state means the code will always have the same training set (in order to reproduce results)\n",
     "\n",
-    "train_x, test_x, train_y, test_y = train_test_split(x, y, test_size=0.3, random_state=42)"
+    "# First we split in Train (0.7) & in Test (0.3)\n",
+    "# random state means the code will always have the same training set (in order to reproduce results)\n",
+    "train1_x, test_x, train1_y, test_y = train_test_split(x, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Second we split again to get Train (0.7) / Validation (0.2) / Test (0.3)\n",
+    "train_x, validation_x, train_y, validation_y = train_test_split(train1_x, train1_y, test_size=(0.2/0.7), random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "029ee429",
    "metadata": {},
    "outputs": [
@@ -812,19 +884,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of train_x: (28831, 53)\n",
-      "Shape of test_x: (12357, 53)\n",
-      "Shape of train_y: (28831,)\n",
-      "Shape of test_y: (12357,)\n"
+      "Shape of train_x             : (20593, 53)\n",
+      "Shape of validation_x        : (8238, 53)\n",
+      "Shape of test_x              : (12357, 53)\n",
+      "Shape of train_y             : (20593,)\n",
+      "Shape of validation_y        : (8238,)\n",
+      "Shape of test_y              : (12357,)\n",
+      "\n",
+      "Lenght of Dataset            :  41188\n",
+      "Percentage of Train          :  50.00 %\n",
+      "Percentage of Validation     :  20.00 %\n",
+      "Percentage of Test           :  30.00 %\n"
      ]
     }
    ],
    "source": [
     "#Quick check if the split is correct:\n",
-    "print(\"Shape of train_x: \"+str(train_x.shape))\n",
-    "print(\"Shape of test_x: \"+str(test_x.shape))\n",
-    "print(\"Shape of train_y: \"+str(train_y.shape))\n",
-    "print(\"Shape of test_y: \"+str(test_y.shape))"
+    "print(\"Shape of train_x             : \"+str(train_x.shape))\n",
+    "print(\"Shape of validation_x        : \"+str(validation_x.shape))\n",
+    "print(\"Shape of test_x              : \"+str(test_x.shape))\n",
+    "print(\"Shape of train_y             : \"+str(train_y.shape))\n",
+    "print(\"Shape of validation_y        : \"+str(validation_y.shape))\n",
+    "print(\"Shape of test_y              : \"+str(test_y.shape))\n",
+    "print('')\n",
+    "print(\"Lenght of Dataset            : \", len(x))\n",
+    "print(\"Percentage of Train          : \", '{:.2f}'.format(len(train_x)/len(x)*100), '%')\n",
+    "print(\"Percentage of Validation     : \", '{:.2f}'.format(len(validation_x)/len(x)*100), '%')\n",
+    "print(\"Percentage of Test           : \", '{:.2f}'.format(len(test_x)/len(x)*100), '%')\n"
    ]
   },
   {
