--- a/AQM Test.ipynb
+++ b/AQM Test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "05c667c9",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "557f415f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "d3c7c070",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "a346e1b3",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "7b19ba59",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "c00fcf31",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "778c1f4a",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "7792f208",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "aa26fa13",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "f4d1dbba",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "4cee6878",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "e565f24c",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "57ce2d6e",
    "metadata": {},
    "outputs": [],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "98ccc0ea",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "8d16c17b",
    "metadata": {},
    "outputs": [
@@ -819,7 +819,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "8e3b5958",
    "metadata": {},
    "outputs": [],
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "5b426d43",
    "metadata": {},
    "outputs": [],
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "74343e06",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "id": "b1ad8f45",
    "metadata": {},
    "outputs": [],
@@ -920,12 +920,12 @@
    "id": "51ec841f",
    "metadata": {},
    "source": [
-    "## Split the Dataset into Train (0.7) / Test (0.3)"
+    "### Split the Dataset into Train (0.7) / Test (0.3) -> and split Train into Train (0.5) and Validate (0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "id": "a5ec74bf",
    "metadata": {},
    "outputs": [],
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "075ebb40",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
        "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "id": "029ee429",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1185,9 @@
       "\n",
       "Lenght of Dataset            :  41188\n",
       "Percentage of Train          :  70.00 %\n",
-      "Percentage of Test           :  30.00 %\n"
+      "Percentage of Test           :  30.00 %\n",
+      "Percentage of Train_x_val    :  50.00 %\n",
+      "Percentage of Validation     :  20.00 %\n"
      ]
     }
    ],
@@ -1198,7 +1200,10 @@
     "print('')\n",
     "print(\"Lenght of Dataset            : \", len(x))\n",
     "print(\"Percentage of Train          : \", '{:.2f}'.format(len(train_x)/len(x)*100), '%')\n",
-    "print(\"Percentage of Test           : \", '{:.2f}'.format(len(test_x)/len(x)*100), '%')\n"
+    "print(\"Percentage of Test           : \", '{:.2f}'.format(len(test_x)/len(x)*100), '%')\n",
+    "\n",
+    "print(\"Percentage of Train_x_val    : \", '{:.2f}'.format(len(train_x_val)/len(x)*100), '%')\n",
+    "print(\"Percentage of Validation     : \", '{:.2f}'.format(len(validation_x)/len(x)*100), '%')\n"
    ]
   },
   {
@@ -1211,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "8c1c24fb",
    "metadata": {},
    "outputs": [
@@ -1230,10 +1235,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   155.9</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sun, 12 Jun 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Sat, 02 Jul 2022</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>07:29:17</td>     <th>  Log-Likelihood:    </th> <td> -4206.8</td>\n",
+       "  <th>Time:</th>                 <td>10:12:04</td>     <th>  Log-Likelihood:    </th> <td> -4206.8</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 28831</td>      <th>  AIC:               </th> <td>   8518.</td>\n",
@@ -1435,8 +1440,8 @@
        "Dep. Variable:                  y_yes   R-squared:                       0.216\n",
        "Model:                            OLS   Adj. R-squared:                  0.215\n",
        "Method:                 Least Squares   F-statistic:                     155.9\n",
-       "Date:                Sun, 12 Jun 2022   Prob (F-statistic):               0.00\n",
-       "Time:                        07:29:17   Log-Likelihood:                -4206.8\n",
+       "Date:                Sat, 02 Jul 2022   Prob (F-statistic):               0.00\n",
+       "Time:                        10:12:04   Log-Likelihood:                -4206.8\n",
        "No. Observations:               28831   AIC:                             8518.\n",
        "Df Residuals:                   28779   BIC:                             8948.\n",
        "Df Model:                          51                                         \n",
@@ -1511,7 +1516,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "ccc1f022",
    "metadata": {},
    "outputs": [
@@ -1576,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "id": "0674b84a",
    "metadata": {},
    "outputs": [],
@@ -1594,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "545354ab",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "id": "51e40bdb",
    "metadata": {},
    "outputs": [
@@ -1702,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "id": "f374ffe0",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "id": "67ef28f9",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "id": "2edc4142",
    "metadata": {},
    "outputs": [
@@ -1826,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 31,
    "id": "d5480a6c",
    "metadata": {},
    "outputs": [
@@ -1836,7 +1841,7 @@
        "array([0.3 , 0.35, 0.4 , 0.45, 0.5 , 0.55, 0.6 , 0.65, 0.7 , 0.75])"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1848,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1863,7 @@
        "       86, 91, 96])"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1870,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 33,
    "id": "c88b014b",
    "metadata": {},
    "outputs": [
@@ -2311,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 34,
    "id": "ffd050fb",
    "metadata": {},
    "outputs": [],
@@ -2352,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 35,
    "id": "91a55a9f",
    "metadata": {},
    "outputs": [
@@ -2572,7 +2577,7 @@
        "0   22  1285  0.105770  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 36,
    "id": "958cfae9",
    "metadata": {},
    "outputs": [
@@ -2637,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 37,
    "id": "5372126a",
    "metadata": {},
    "outputs": [
@@ -2877,7 +2882,7 @@
        "[200 rows x 12 columns]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2888,7 +2893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 38,
    "id": "622180ab",
    "metadata": {},
    "outputs": [
@@ -3335,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 39,
    "id": "a6016f94",
    "metadata": {},
    "outputs": [
@@ -3575,7 +3580,7 @@
        "[200 rows x 12 columns]"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3594,7 +3599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 40,
    "id": "2ddbd96b",
    "metadata": {},
    "outputs": [
@@ -3834,7 +3839,7 @@
        "[410 rows x 12 columns]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3859,7 +3864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 41,
    "id": "1903d6bc",
    "metadata": {},
    "outputs": [
@@ -3928,7 +3933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 42,
    "id": "fe161b26",
    "metadata": {},
    "outputs": [
@@ -3965,10 +3970,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d990ebd",
+   "id": "dfb0648e",
    "metadata": {},
    "source": [
-    "There are business..."
+    "There are other Decisions which might impact the Outcome"
    ]
   }
  ],
